--- a/product-service.properties
+++ b/product-service.properties
@@ -1,4 +1,4 @@
 spring.application.name=product-service
 server.port=8080
-eureka.instance.instance-id=${spring.application.name}
+eureka.instance.instance-id=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
