--- a/order-service.properties
+++ b/order-service.properties
@@ -7,4 +7,4 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.application.name=order-service
 server.port=8181
-eureka.instance.instance-id=${spring.application.name}
+eureka.instance.instance-id=order-service
